fix color on hover active item on mobile

--- a/src/components/TodoList/ToDoList.scss
+++ b/src/components/TodoList/ToDoList.scss
@@ -76,6 +76,7 @@
   }
   .todo__li--hover {
     padding: 3px !important;
+    background-color: rgba(255, 4, 4, 0) !important;
   }
   .todo__li.finished {
     font-size: 16px;
